--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     // Load models from face-api.js CDN
     Promise.all([
-      faceapi.nets.tinyFaceDetector.loadFromUri('https://justadudewhohacks.github.io/face-api.js/models'),
-      faceapi.nets.faceExpressionNet.loadFromUri('https://justadudewhohacks.github.io/face-api.js/models')
+      faceapi.nets.tinyFaceDetector.loadFromUri('/models'),
+      faceapi.nets.faceExpressionNet.loadFromUri('/models')
     ]).then(startVideo);
 
     function startVideo() {
